[gd_scene load_steps=2 format=3 uid="uid://cs14g2jxdxlyd"]

[ext_resource type="Script" uid="uid://dru0wvjfns6nf" path="res://hitbox_area/hitbox_area.gd" id="1_u4xrl"]

[node name="HitboxArea" type="Area2D"]
collision_layer = 20
collision_mask = 0
script = ExtResource("1_u4xrl")

[connection signal="area_entered" from="." to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_hurtbox_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
